# Recall

./: .gitignore  Readme.md
.claude/: settings.json
app/: .gitignore  README.md  get-models.ps1  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/example/recall/: MainActivity.java
app/android/app/src/main/kotlin/com/example/recall/: GenieXRunner.kt
app/lib/: chat_store.dart  home_page.dart  main.dart  memory_pipeline.dart  theme.dart
app/lib/impl/: bge_embedder.dart  local_memory.dart  mic_vad_capture.dart  qual_inference_engine.dart  routed_inference_engine.dart  sarvam_stt.dart  sarvam_tts.dart  sherpa_speaker_recognizer.dart  sherpa_whisper_transcriber.dart  synced_memory.dart  wordpiece_tokenizer.dart
app/lib/pipeline/: inference_engine.dart  speaker_recognizer.dart  speech_capture.dart  speech_to_text.dart  text_to_speech.dart  transcriber.dart  vector_store.dart
app/lib/util/: answer_format.dart  asset_utils.dart  audio_util.dart  float_bytes.dart
app/lib/widgets/: listening_orb.dart
app/test/: answer_format_test.dart  language_filter_test.dart  routed_inference_test.dart  wordpiece_tokenizer_test.dart
docs/: recall.md  system_architectures_v1.md
extension/: README.md  background.js  content.js  github.js  manifest.json  offscreen.html  offscreen.js  options.html  options.js  pdf-content.js  popup.css  popup.html  popup.js  repoGraph.js
pc/: Makefile  README.md  demo.db  demo_hub.db-shm  demo_hub.db-wal  dev.py  pyproject.toml  requirements.txt
pc/hub/: __init__.py  __main__.py  app.py  asr.py  mcp_server.py  metrics.py  policy.py  proactive.py  registry.py  sessions.py  tts.py
pc/hub/dashboard/: capture.html  index.html
pc/models/: README.md
pc/recall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pc/recall_memory/: __init__.py  chunker.py  cli.py  config.py  consolidate.py  demo_data.py  embeddings.py  extractors.py  ingest.py  llm_validate.py  nmo.py  okf.py  retrieval.py  router.py  store.py  tokenizer.py  tracing.py
pc/recall_memory/backends/: __init__.py  base.py  hash_backend.py  npu.py  ollama.py
pc/scripts/: run_hub.py
pc/tests/: test_hub.py  test_recall_memory.py
unoq/: README.md  app.yaml  main.py  sketch.ino
unoq/python/: main.py
unoq/sketch/: sketch.ino
