[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recall"
version = "2.0.0"
description = "Recall — ambient, privacy-first, on-device AI memory companion (Snapdragon X Elite / NPU)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

# Core runtime — everything the engine + hub need on ANY backend.
# The heavy on-device runtimes live in the [npu] extra so the dev laptop
# (RECALL_BACKEND=ollama) never has to install them.
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.115",
    "uvicorn>=0.30",    # NOT uvicorn[standard]: that extra pulls in httptools,
                        # which has no prebuilt wheel for win_arm64 (Snapdragon
                        # X Elite) and fails to compile without a full MSVC C++
                        # toolchain. Plain uvicorn (h11) is all this app needs —
                        # we don't run with --reload, so watchfiles isn't needed.
    "httpx>=0.27",
    "requests>=2.31",
    "mcp>=1.2",
    "tokenizers>=0.20",
    "python-dotenv>=1.0",
    "websockets>=12",   # Sarvam streaming TTS (wss://.../text-to-speech/ws)
    # mcp -> pyjwt[crypto] -> cryptography. Pinned because cryptography only
    # ships a prebuilt win_arm64 wheel for 46.0.x; any other version pip picks
    # falls back to an sdist that needs a Rust toolchain (cargo/maturin) with
    # the aarch64-pc-windows-msvc target + link.exe, which isn't set up on the
    # event PC.
    "cryptography>=46.0.0,<47",
]

[project.optional-dependencies]
# On-device NPU stack — installed only on the Snapdragon X Elite event PC.
# Guarded imports in recall_memory/backends/npu.py mean the package still
# imports and runs (on the ollama/hash backend) without any of these present.
npu = [
    "onnxruntime-qnn; platform_machine == 'ARM64'",  # QNN EP: Nomic v1.5, Whisper, reranker
    "transformers>=4.44",                            # AutoTokenizer for Qwen3 / Nomic
    "onnx>=1.16",
]
# In-process ASR for the dev laptop (x64) — the event PC uses ORT-QNN Whisper
# over HTTP instead, so this stays optional (ctranslate2 has no ARM64 wheel).
asr = [
    "faster-whisper>=1.0",
]
# Real cross-encoder reranker for the ollama backend (laptop dev) — Ollama has
# no rerank endpoint (bge-reranker-v2-m3 served through /api/embed only gives
# an embedding-similarity hack, not a real cross-encoder score), so this loads
# BAAI/bge-reranker-v2-m3 directly via sentence-transformers, GPU-accelerated
# if CUDA is available. Set RECALL_RERANKER_MODEL to enable (see .env).
rerank = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
dev = [
    "pytest>=8",
]

[project.scripts]
recall = "recall_memory.cli:main"

[tool.setuptools]
packages = ["recall_memory", "hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
